bk_ida/gccida/c3/int_fits_type_p
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/int_fits_type_p/src/tree.c:4783:7: error: conflicting types for 'int_fits_type_p'
char  int_fits_type_p( tree c, tree type) 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/int_fits_type_p/src/tree.h:2913:12: note: previous declaration is here
extern int int_fits_type_p              PARAMS ((tree, tree));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/int_fits_type_p/src/tree.c:4790:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/int_fits_type_p/src/tree.c:4820:19: error: expected expression
v8 = ( tree_node *)ggc_alloc( v7); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/int_fits_type_p/src/tree.c:4820:8: error: use of undeclared identifier 'tree_node'
v8 = ( tree_node *)ggc_alloc( v7); 
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/int_fits_type_p/src/tree.c:4848:15: error: expected expression
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/int_fits_type_p/src/tree.c:4848:7: error: use of undeclared identifier '_OWORD'
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/int_fits_type_p/src/tree.c:4848:45: error: expected expression
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
                                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/int_fits_type_p/src/tree.c:4848:37: error: use of undeclared identifier '_OWORD'
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/int_fits_type_p/src/tree.c:4860:15: error: expected expression
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/int_fits_type_p/src/tree.c:4860:7: error: use of undeclared identifier '_OWORD'
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/int_fits_type_p/src/tree.c:4860:45: error: expected expression
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
                                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/int_fits_type_p/src/tree.c:4860:37: error: use of undeclared identifier '_OWORD'
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
                                    ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/int_fits_type_p/src/obj/tree.o] Error 1
